--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "cls-bluebird": "^2.1.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "express-session": "^1.15.6",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.2",
+    "morgan": "^1.8.1",
+    "mysql": "^2.13.0",
+    "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "retry-as-promised": "^3.0.0",
-    "sequelize": "^4.38.0",
-    "terraformer-wkt-parser": "^1.2.0"
+    "sequelize": "^4.37.10",
+    "sequelize-cli": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
