--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "E-commerce website for women's clothing line",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
